# rules_meson

./: MODULE.bazel  README.md
meson/: meson_tools.bzl
meson_to_bazel/: README.md  build_ir.proto  cargo_frontend.py  emit_bazel.py  emit_kythe.py  emit_tree.py  mozbuild_frontend.py  test_cargo.py  test_layer_a.py  test_tree.py  validate_partition.py
meson_to_bazel/testdata/: cargo.golden.BUILD  cargo_metadata.json  firefox_like.golden.BUILD
